css/styles.css
html, body {
    height: 100%;
    font-family: 'Roboto', sans-serif;
}
body {
    display: flex;
    align-items: stretch;
}

#navbardiv {
    position: absolute;
    z-index: 3;
}

#navbartable {
    overflow-y:auto;
    position: fixed;
    background-color:  #012169;
    left:20px;
    right:20px;
    top: 25px;
    
    
    height: 92px;
    
    /*border: 2px solid black;
    border-color: solid black;*/
    background-color: #012169;
    color: white;
    border-radius: 12px;
}

#logo {
    width: 100%;
}
#logoobj {
    margin-left: calc((100% - 307px)/2);
}

.container {
    display: inline-block;
    cursor: pointer;
    margin-left: 30px;
}
  
.bar1, .bar2, .bar3 {
    width: 35px;
    height: 5px;
    background-color: white;
    margin: 10px 0;
    transition: 0.4s;
    position: relative;
}

.change .bar1 {
    transform: translate(0, 15px)  rotate(45deg);
}
  
.change .bar2 {opacity: 0;}
  
.change .bar3 {
    transform: translate(0, -15px) rotate(-45deg);
}
#date, #clock {
    text-align: center;   
}
#datetime {
    left:0px;
    margin-right: 30px;
    vertical-align: middle;
}
#clock {vertical-align: top;font-size: 27px;}
#date {vertical-align: bottom; font-size: 20px;}

#searchinput {
    background-color: rgba(237, 237, 237, 0.51);
    border-radius: 27.5px;
    padding: 13px;
    margin-left: 23px;   
    color:white;
    font-size: 12px;
    height: 42px;
    text-align: left;
    width: 236px;
    position: relative;
    right: 0px;
}

#searchinput::placeholder {
    color: rgb(255, 255, 255);
  }

#categories {
    overflow-x:auto;
    white-space: nowrap;
    float:left;
    position:fixed;
    border-radius: 23px;
    
    top: 128px;
    border-radius: 10px;
    border: 1px solid #000;
    
    background: #D8D8D8;
    
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    color: #000;

    left:20px;
    right:20px;

    text-align: center;
    min-height: 34px;
    text-indent: 10px, 10px;
    z-index: 3;
}
.catga {
    color: #000;

    text-align: center;
    font-family: "Roboto Mono";
    font-size: 15px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
    text-decoration: none;
    vertical-align: -webkit-baseline-middle;
}

#currencies {
    border-radius: 10px;
    border: 1px solid #000;

    background: #000;
    
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);

    
    float:left;

    position:absolute;
    border-radius: 23px;
    
    top: 173px;
    border-radius: 10px;

    left:20px;
    right:20px;

    
    min-height: 34px;


    color: #FFF;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    font-family: "Roboto Mono";
    font-size: 15px;
    font-style: normal;
    

    vertical-align: middle;
    text-align: center;

    overflow-x:auto;
    white-space: nowrap;
}

#navbarclose {
    z-index: 2;
    background-color: white;
    width: 100%;
    position:fixed;
    top:0;
    border: #012169;
    height: 160px;
}

#currencytext {
    position:relative;
    vertical-align: -webkit-baseline-middle;
    text-align: center;
}

.inc {color:#00FF80;}
.dec {color: #FF0000}

@media screen and (max-width: 900px) {
    #searchbar{
      display: none;
    }
    #logo {
        text-align: center;
    }
}

@media screen and (max-width: 500px) {
    #datetime {
        display: none;
    }
}

#sidebarmenu {
    z-index: 4;
    position:fixed;
    top: 128px;
    left: -300px;
    width: 237px;
    height: calc(100% - 148px);
    border-radius: 10px;
    border: 2px solid #000;
    background: #222;
    box-shadow: 10px 1px 5px 0px rgba(0, 0, 0, 0.25);  
    transition: 0.75s;
    padding-left: 14px;
}

.sbmenuc{
    transform: translate(320px, 0px);
} 

#sbmenusearchinput {
    background-color: rgba(237, 237, 237, 0.51);
    border-radius: 27.5px;
border: 1px solid #000;
background: rgba(237, 237, 237, 0.51);
box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
    padding: 9px; 
    color:white;
    font-size: 8x;
    height: 30px;
    text-align: left;
    width: 169px;
    position: relative;
    right: 0px;
    top: 14px;
    
    
}

#sbmenusearchinput::placeholder {
    color: rgb(255, 255, 255);
}

.sbmca {
    color: #FFF;
    font-family: "Roboto Mono";
    font-size: 15px;
    font-style: normal;
    font-weight: 500;
    line-height: 30px; /* 200% */
    left: 14px;
    text-decoration: none;
}

